[package]
name = "clue-sys"
version = "0.1.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
description = "Native bindings to clue"
license = "MIT"
homepage = "https://github.com/stephaneyfx/clue-sys"
repository = "https://github.com/stephaneyfx/clue-sys.git"
keywords = ["clue"]
links = "clue"
build = "build.rs"

[build-dependencies]
bindgen = "0.26.0"
cmake = "0.1.24"
git2 = {version = "0.6.6", path = "../other/git2-rs"}
